Refactor controllers structure
